tweak kerning on front page, fix wrong link in navbar

--- a/css/style.css
+++ b/css/style.css
@@ -788,6 +788,7 @@
 
    }
    #top .char2 { margin-left: -0.062em }
+   #top .char2 { margin-left: -0.079em }
    #top .char3 { margin-left: -0.019em }
    #top .char8 { margin-left: -0.019em }
    #top .char7 { margin-left: -0.025em }
