--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,10 +53,9 @@
   
   <!--  stylesheets -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/solarized.css">
     
-  <!--  modernizr -->
-	<script src="js/libs/modernizr-2.5.3.min.js"></script>
+  <!--  modernizr
+	<script src="js/libs/modernizr-2.5.3.min.js"></script> -->
 </head>
 
 <body>
