--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -53,12 +53,11 @@
   
   <!--  stylesheets -->
   <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
-  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/solarized.css"> -->
   <link href="{{ site.baseurl }}/prettify/prettify.css" type="text/css" rel="stylesheet">
   <link href="{{ site.baseurl }}/prettify/wpp.css" type="text/css" rel="stylesheet">
     
-  <!--  modernizr -->
-	<script src="{{ site.baseurl }}/js/libs/modernizr-2.5.3.min.js"></script>
+  <!--  modernizr
+	<script src="{{ site.baseurl }}/js/libs/modernizr-2.5.3.min.js"></script> -->
 </head>
 
 <body>
