clean up stylistic modules, brought into the normalize

--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,24 @@
       }
 
 
+/* figures
+ */
+      figure {
+         /*margin: 0;*/
+         margin-bottom: 24px;
+         margin-bottom: 1.5rem;
+      }
+      figure > img {
+         max-width: 100%;
+         /*margin-bottom: 24px;*/
+         /*margin-bottom: 1.5rem;*/
+         display: block;
+      }
+      figcaption {
+         margin-top: 1.5rem;
+      }
+
+
 /* f) tables
  ============================================================
  *
@@ -270,6 +288,28 @@
          border-collapse: collapse;
          border-spacing: 0;
       }
+   table {
+      width: 100%;
+      text-align: left;
+      font-size: 13px;
+      font-size: 0.8125rem;  /* 12px = 16 × 0.875 */
+   }
+   td, th {
+      padding: 0;
+      line-height: 1.769230769;
+      border-bottom: 0.0625rem solid #ddd;
+   }
+   th {
+      text-transform: uppercase;
+      border-bottom-color: #aaa;
+   }
+   caption {
+      caption-side: bottom;
+      margin: 0.75rem 0 0.75rem;
+      text-align: left;
+      font-weight: bold;
+      font-style: italic;
+   }
 
 
 /* g) forms
@@ -374,6 +414,81 @@
          vertical-align: top;
       }
 
+
+legend, fieldset, button, input, select, textarea {
+   line-height: 1.5;
+   margin: 0;
+   padding: 0;
+   border: 0;
+}
+form {
+   margin-bottom: 1.5rem;
+}
+fieldset {
+   border-top: 1px solid #ccc;
+   clear: left;
+   padding: 0.75rem 0;
+}
+
+label {
+   margin: 0.75rem 0 2.25rem 0;
+   width: 35%;
+}
+input[type="checkbox"], input[type="radio"] {
+   margin: 1rem 0 1rem 0;
+   width: auto;
+   height: 1rem;
+}
+input, textarea, select {
+   width: 65%;
+   padding: 0.375rem 0;
+   margin: 0.375rem 0;
+   background-color: #ccc;
+}
+input:focus {
+   outline-offset: -3px;
+}
+input[type="search"] {
+   width: 50%;
+}
+input[type="submit"]:not(.search), input[type="button"] {
+   width: auto;
+   min-width: 9rem;
+   padding-left: 0.75em;
+   padding-right: 0.75em;
+}
+select {
+margin: 2rem 0 2rem 0;
+height: 2rem;
+clear: left;
+}
+input.search {
+   width: 15%;
+   background-color: #aaa;
+   text-transform: uppercase;
+}
+label[for="textarea"], label[for="select"] {
+   margin-bottom: 0.75rem;
+}
+textarea {
+   margin-bottom: 1.875rem;
+}
+form em {
+   display: block;
+   font-size: .75rem;
+   line-height: 2;
+   margin-bottom: 1.5rem;
+}
+.hang-inside-left {
+   float: left;
+   clear: left;
+   /*margin-right: 3rem;*/
+}
+form ul {
+   list-style: none;
+   padding-left: 1.5em;
+   margin-bottom: 0;
+}
 
 
 /*
@@ -496,17 +611,6 @@
       margin-top: -1.5rem;
       text-indent: 3em;
    }
-   /*p:first-of-type, .freight:first-of-type {
-      text-indent: 0;
-   }
-   p:last-of-type, .freight:last-of-type {
-      margin-bottom: 24px;
-      margin-bottom: 1.5rem;
-   }
-   .lt-ie9 p, .lt-ie9 .freight {
-      margin: 0 0 1.5em;
-     text-indent: 0; 
-   }*/
 
 /* minor type
  */
@@ -768,6 +872,11 @@
          margin-bottom: 0;
       }
 
+/* main container
+ */
+   section[role="main"] {
+      
+   }
 
 
 /*
@@ -779,121 +888,6 @@
    body {
       background-color: #eee;
    }
-
-   figure {
-      /*margin: 0;*/
-      margin-bottom: 24px;
-      margin-bottom: 1.5rem;
-   }
-   figure > img {
-      max-width: 100%;
-      /*margin-bottom: 24px;*/
-      /*margin-bottom: 1.5rem;*/
-      display: block;
-   }
-   figcaption {
-      margin-top: 1.5rem;
-   }
-
-   table {
-      width: 100%;
-      text-align: left;
-      font-size: 13px;
-      font-size: 0.8125rem;  /* 12px = 16 × 0.875 */
-   }
-   td, th {
-      padding: 0;
-      line-height: 1.769230769;
-      border-bottom: 0.0625rem solid #ddd;
-   }
-   th {
-      text-transform: uppercase;
-      border-bottom-color: #aaa;
-   }
-   caption {
-      caption-side: bottom;
-      margin: 0.75rem 0 0.75rem;
-      text-align: left;
-      font-weight: bold;
-      font-style: italic;
-   }
-
-
-legend, fieldset, button, input, select, textarea {
-   line-height: 1.5;
-   margin: 0;
-   padding: 0;
-   border: 0;
-}
-form {
-   margin-bottom: 1.5rem;
-}
-fieldset {
-   border-top: 1px solid #ccc;
-   clear: left;
-   padding: 0.75rem 0;
-}
-
-label {
-   margin: 0.75rem 0 2.25rem 0;
-   width: 35%;
-}
-input[type="checkbox"], input[type="radio"] {
-   margin: 1rem 0 1rem 0;
-   width: auto;
-   height: 1rem;
-}
-input, textarea, select {
-   width: 65%;
-   padding: 0.375rem 0;
-   margin: 0.375rem 0;
-   background-color: #ccc;
-}
-input:focus {
-   outline-offset: -3px;
-}
-input[type="search"] {
-   width: 50%;
-}
-input[type="submit"]:not(.search), input[type="button"] {
-   width: auto;
-   min-width: 9rem;
-   padding-left: 0.75em;
-   padding-right: 0.75em;
-}
-select {
-margin: 2rem 0 2rem 0;
-height: 2rem;
-clear: left;
-}
-input.search {
-   width: 15%;
-   background-color: #aaa;
-   text-transform: uppercase;
-}
-label[for="textarea"], label[for="select"] {
-   margin-bottom: 0.75rem;
-}
-textarea {
-   margin-bottom: 1.875rem;
-}
-form em {
-   display: block;
-   font-size: .75rem;
-   line-height: 2;
-   margin-bottom: 1.5rem;
-}
-.hang-inside-left {
-   float: left;
-   clear: left;
-   /*margin-right: 3rem;*/
-}
-form ul {
-   list-style: none;
-   padding-left: 1.5em;
-   margin-bottom: 0;
-}
-
 
 
 /*
@@ -945,7 +939,7 @@ form ul {
             -moz-linear-gradient(left, rgba(0,0,255,0.2) 1px, transparent 1px);
          background-size: 1.5rem 1.5rem;
       }
-      #grid:target .styleguide {
+      #grid:target > section {
          z-index: -1;
       }
 
@@ -961,29 +955,3 @@ form ul {
          opacity: 0;
       }
 
-
-/*
- * 9. styleguide
- ============================================================
- ============================================================
- */
-
-   .styleguide, section[role="main"] {
-      width: 48em;
-      position: relative;
-      margin-left: 7.5rem;
-      background-color: #fff;
-      padding: 24px 48px;
-      padding: 1.5rem 4.5rem; /* 24px ÷ 16 = 1.5 (24 = 24 × 1) */
-   }
-   .clause {
-   }
-/*   .example {
-      background-color: #eee;
-      padding: 1.5rem 1.5rem 0;
-      outline: 1px solid #999;
-      overflow: auto;
-   }
-   .example > :first-child {
-      margin-top: 0;
-   }
