tweak  author & url

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 /*
  * Web-Craft Primer v1.0
  ============================================================
- *    url: http://webcraft.zacharykain.com
- *    src: http://github.com/zakkain/webcraft
+ *    url: lab.zacharykain.com/webcraft
  *    
- *    author: @zakkain
+ *    author: Zachary Kain (@zakkain)
  *    license: this work is in the public domain
  *                http://creativecommons.org/publicdomain/zero/1.0
  *    
