tweaked media queries, wrote primer page, set up docs page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <div class="anchor-panel dark-area">
 	<header>
 		<div>
-			<span class="symbol txt-green">⚒</span>
+			<span class="symbol txt-green">⚙</span>
 		</div>
 		<h1 class="hN alpha title"><a class="txt-white" href="{{ site.baseurl }}">Web-Craft</a></h1>
 		<nav role="navigation">
